--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,13 @@
 }
 
 body {
-  font-family: Karla,sans-serif;
+  font-family: Roboto,sans-serif;
   background-color: white;
 }
 
 .container {
   background-color: white;
-  height: 100vh;
+  min-height: 100%;
   margin: 0 auto;
   width: 50rem;
   justify-content: center;
@@ -28,10 +28,10 @@ hr {
 }
 
 p {
-  font-family: Karla;
-  font-size: 1.6rem;
+  font-family: Roboto;
+  font-size: 1.5rem;
   line-height: 1.3;
-  margin-top: .5rem;
+  margin-top: 1rem;
 }
 
 h1 {
@@ -40,6 +40,7 @@ h1 {
   padding-bottom: 1rem ;
 }
 
+
 h1.intro{
   text-align: center;
 }
@@ -47,13 +48,15 @@ h1.intro{
 h2 {
   font-size: 2rem;
   font-family: Inconsolata;
-  font-weight: strong;
+  text-align: center;
 }
 
 h3 {
-  font-family: Karla, sans-serif;
+  font-family: Roboto, sans-serif;
   font-size: 1.5rem;
   font-weight: bold;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 /* about page bio image */
@@ -98,6 +101,14 @@ section {
   text-align: center;
 }
 
-@media screen and (min-widthL 110 em) {
+footer {
+  justify-content: center;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  padding-top: 2em;
+}
+
+@media screen and (min-width 110 em) {
 
 }
