made changes to media query

--- a/css/flex.css
+++ b/css/flex.css
@@ -46,6 +46,8 @@ li {
     flex-direction: column;
     justify-content: center;
     height: 30 rem;
+    overflow: wrap;
+    margin: 0 auto;
   }
 
 }
