--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ body {
   background-color: white;
   min-height: 100%;
   margin: 0 auto;
-  width: 50rem;
-  justify-content: center;
+  max-width:1450px;
+  width: 37.5rem;
 }
 
 
@@ -28,25 +28,22 @@ hr {
 }
 
 p {
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-size: 1.5rem;
   line-height: 1.3;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
 }
 
 h1 {
   font-family: Fugaz One,cursive;
   font-size: 2.5rem;
-  padding-bottom: 1rem ;
+  padding-bottom: 1rem;
 }
 
 
-h1.intro{
-  text-align: center;
-}
 
 h2 {
-  font-size: 2rem;
+  font-size: 2.3em;
   font-family: Inconsolata;
   text-align: center;
 }
@@ -55,8 +52,12 @@ h3 {
   font-family: Roboto, sans-serif;
   font-size: 1.5rem;
   font-weight: bold;
-  padding-top: 1em;
-  padding-bottom: 1em;
+  padding-top: 1.5em;
+}
+
+h4 {
+  font-family: Inconsolata;
+  font-size: 1.7rem;
 }
 
 /* about page bio image */
@@ -88,8 +89,9 @@ img.smartcookie-graph, img.stem-persona, img.la-persona, img.sc-user-stories, im
   padding-bottom: 2em;
 }
 
-.project-cell {
+img.project-tile {
   margin: 0 auto;
+  max-width: 37.5em;
 }
 
 /* section styling / structure */
@@ -102,9 +104,18 @@ section {
 }
 
 footer {
-  justify-content: center;
   text-align: center;
-  position: absolute;
-  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2em;
+  width: 50rem;
   padding-top: 2em;
+}
+
+@media screen and (min-width 110 em) {
+  .container {
+    width: 80% vh;
+    margin: 0 auto;
+  }
+
 }
