--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   min-height: 100%;
   margin: 0 auto;
   max-width:1450px;
-  width: 37.5rem;
+  width: 37rem;
 }
 
 
@@ -112,10 +112,12 @@ footer {
   padding-top: 2em;
 }
 
-@media screen and (min-width 110 em) {
+@media screen and (min-width 360px ) {
   .container {
-    width: 80% vh;
-    margin: 0 auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
   }
 
 }
